# project-useful-monorepo

./: .gitignore  README.md  assign_scenarios.py  auto-activate.template.sh  bbm-list  bbm-view  combine-answers.py  create-assignments.py  create-pem-index.py  create-useful-database.py  data-analysis.ipynb  data_analysis_utils.py  enhance-using-decaf.py  enhance-using-llm.py  fix-brain-fart.py  main.py  pickle-llm-results.py  pickle-sample.py  pyproject.toml  rate-pems.py  sample-pem-index.py  top_errors.py
blackbox_mini/: __init__.py
project_antipatterns/: enrich_database.py
