[tool.poetry]
name = "project-useful-monorepo"
version = "0.1.0"
description = "Project Useful"
authors = ["Eddie Antonio Santos <eddie.santos@ucdconnect.ie>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [
    {include = "project_antipatterns"},
    {include = "blackbox_mini"},
]

[tool.poetry.dependencies]
python = "^3.11"
pygments = "^2.15.1"
questionary = "^1.10.0"
openai = "^0.27.4"
python-dotenv = "^1.0.0"
tqdm = "^4.65.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
