[tool.poetry]
name = "project-useful-monorepo"
version = "0.1.0"
description = "Project Useful"
authors = ["Eddie Antonio Santos <eddie.santos@ucdconnect.ie>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [
    {include = "project_antipatterns"},
    {include = "blackbox_mini"},
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pygments = "^2.15.1"
questionary = "^1.10.0"
openai = "^0.27.4"
python-dotenv = "^1.0.0"
tqdm = "^4.65.0"
rich = "^13.3.4"
sqlite-utils = "^3.30"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
types-tqdm = "^4.65.0.1"
types-pygments = "^2.15.0.0"

[tool.poetry.group.data-analysis]
optional = true

[tool.poetry.group.data-analysis.dependencies]
ipykernel = "^6.22.0"
pandas = "^2.0.1"
scipy = "^1.10.1"
jupyter = "^1.0.0"
sqlite-utils = "^3.30"
scikit-learn = "^1.2.2"
openpyxl = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
